# DungeonMaster

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  README.md  VAULT_AND_STATE.md
src/dungeonmaster/: __init__.py  config.py  main.py
src/dungeonmaster/ai/: __init__.py  orchestrator.py  rag.py
src/dungeonmaster/ai/providers/: __init__.py  base.py  claude.py  ollama.py
src/dungeonmaster/core/: __init__.py  engine.py  note_taker.py  session.py
src/dungeonmaster/data/: __init__.py  state.py  vault.py  watcher.py
src/dungeonmaster/interfaces/: __init__.py  base.py
src/dungeonmaster/interfaces/discord/: __init__.py  bot.py
tests/: __init__.py  conftest.py  test_config.py  test_engine.py  test_note_taker.py  test_rag.py  test_session.py  test_state.py  test_vault.py
